--- a/src/components/Navigation/SideDrawer/SideDrawer.module.css
+++ b/src/components/Navigation/SideDrawer/SideDrawer.module.css
@@ -1,32 +1,34 @@
-.SideDrawer{
-    position: fixed;
-    width: 200px;
-    max-width: 70%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    z-index: 15;
-    background-color: azure;
-    padding: 32px 16px;
-    box-sizing: border-box;
-    transition: transform 0.3s ease-out;
+.SideDrawer {
+  position: fixed;
+  width: 200px;
+  max-width: 70%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 15;
+  background-color: white;
+  padding: 32px 16px;
+  box-sizing: border-box;
+  transition: transform 0.3s ease-out;
 }
 
-@media (min-width: 500px ){
-    .SideDrawer{
-        display: none;
-    }
+@media (min-width: 500px) {
+  .SideDrawer {
+    display: none;
+  }
 }
 
-.Open{
-    transform: translateX(0);
+.Open {
+  transform: translateX(0);
 }
 
-.Closed{
-    transform: translateX(-100%);
+.Closed {
+  transform: translateX(-100%);
 }
-.Logo{
-    height: 11%;
-    margin-bottom: 30px;
+.Logo {
+  height: 11%;
+  margin-bottom: 30px;
 }
-
+.Logo img {
+  background-color: inherit;
+}
