sandwich builder reactjs

--- a/src/components/Sandwich/Sandwich.module.css
+++ b/src/components/Sandwich/Sandwich.module.css
@@ -1,4 +1,4 @@
-.Burguer{
+.Sandwich{
     width: 100%;
     margin: auto;
     height: 350px;
@@ -9,20 +9,20 @@
 }
 
 @media(min-width:1000px) and (min-height:700px){
-    .Burguer{
+    .Sandwich{
         width: 700px;
         height: 600px;
     }
 }
 @media(min-width:500px) and (min-height:401px){
-    .Burguer{
+    .Sandwich{
         width: 450px;
         height: 400px;
     }
 }
 
 @media(min-width:500px) and (min-height:400px){
-    .Burguer{
+    .Sandwich{
         width: 350px;
         height: 300px;
     }
