--- a/src/components/Navigation/SideDrawer/MenuButton/MenuButton.module.css
+++ b/src/components/Navigation/SideDrawer/MenuButton/MenuButton.module.css
@@ -1,15 +1,20 @@
 .Button {
-    background-color: transparent;
-    border: none;
-    color: black;
-    outline: none;
-    cursor: pointer;
-    font: inherit;
-    font-weight: bold;
+  background-color: transparent;
+  border: none;
+  color: black;
+  outline: none;
+  cursor: pointer;
+  font: inherit;
+  font-weight: bold;
+  padding: 0;
+  text-align: justify;
 }
-@media(min-width:500px){
-    .Button{
-        display: none;
-    }
+.Img {
+  height: 18px;
+  width: 18px;
 }
-
+@media (min-width: 500px) {
+  .Button {
+    display: none;
+  }
+}
